# tfhe-biometrics

./: Cargo.toml  README.md
.github/workflows/: aws_tfhe_fast_tests.yml  aws_tfhe_gpu_4090_tests.yml  aws_tfhe_gpu_tests.yml  aws_tfhe_integer_tests.yml  aws_tfhe_signed_integer_tests.yml  aws_tfhe_tests.yml  aws_tfhe_wasm_tests.yml  boolean_benchmark.yml  code_coverage.yml  core_crypto_benchmark.yml  core_crypto_gpu_benchmark.yml  csprng_randomness_tests.yml  gpu_4090_full_benchmark.yml  integer_benchmark.yml  integer_full_benchmark.yml  integer_gpu_benchmark.yml  integer_gpu_full_benchmark.yml  integer_multi_bit_benchmark.yml  integer_multi_bit_gpu_benchmark.yml  m1_tests.yml  make_release_cuda.yml  shortint_benchmark.yml  shortint_full_benchmark.yml  signed_integer_benchmark.yml  signed_integer_full_benchmark.yml  signed_integer_multi_bit_benchmark.yml  start_benchmarks.yml  sync_on_push.yml  wasm_client_benchmark.yml
bio_aux/: Cargo.toml
bio_aux/src/: io.rs  lib.rs
config/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
tfhe/src/core_crypto/: mod.rs
tfhe/src/core_crypto/biometrics/: common.rs  mod.rs
tfhe/src/core_crypto/biometrics/cpu/: mod.rs  tfhe_functions_multibit.rs
tfhe/src/core_crypto/biometrics/cpu_gpu/: all_in_one_multibit.rs  mod.rs  tfhe_functions_multibit.rs
tfhe/src/core_crypto/biometrics/gpu/: all_in_one_classic.rs  all_in_one_multibit.rs  mod.rs  tfhe_functions_classic.rs
tfhe/src/core_crypto/my_bio/: all_in_one_classic.rs  all_in_one_multibit.rs  common.rs  mod.rs  tfhe_functions_classic.rs
(+10 files in other folders)
